--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,70 @@
 ---
-# defaults file for ansible-role-linux-alerta
+# General parameters #
+alerta_is_install: false # A boolean value, whether install the Alerta.
+alerta_admin_user: 'admin' # Alerta Superuser name.
+alerta_admin_pass: 'changeme' # Alerta Superuser password.
+alerta_dist_path: '/data' # Specify the Alerta web ui folder.
+alerta_cluster: 'alerta' # Cluster name of servers that implements distribution performance.
+
+# Role dependencies #
+alerta_mongod_dept: false # A boolean value, whether MongoDB database use the same environment.
+
+# Listen port #
+alerta_port_arg:
+  api: '8080' # The port number of API.
+  webui: '8000' # The port number of Web UI.
+
+# MongoDB parameters #
+alerta_mongod_auth: false # A boolean value, Enable or Disable MongoDB authentication.
+alerta_mongod_hosts: 'localhost' # Group of MongoDB hosts Graylog should connect to.
+alerta_mongod_node_role: 'replica' # Member role for ReplicaSet.
+alerta_mongod_path: '{{ alerta_dist_path }}' # Specify the MongoDB data directory.
+alerta_mongod_port: '27017' # The MongoDB instance port.
+alerta_mongod_replset: '{{ alerta_cluster }}' # MongoDB ReplicaSet name.
+alerta_mongod_sa_pass: 'changeme' # MongoDB Superuser password.
+alerta_mongod_sa_user: 'sa' # MongoDB Superuser name.
+alerta_mongod_user: 'alerta' # MongoDB Graylog username.
+alerta_mongod_pass: 'changeme' # MongoDB Graylog password.
+alerta_mongod_version: '36' # Specify the MongoDB version.
+alerta_mongod_backupset_arg: # Defines backup parameters.
+  keep: '7' # Backup retention cycle in days.
+  encryptkey: 'wEX6nE3eHAJp' # BackupSet encryption key, Decrypt by [openssl aes-256-cbc -d -k passwd -salt -in file.tar.gz | tar xzvfP -].
+  cloud_rsync: false # Whether rsync for cloud storage.
+  cloud_drive: 'azureblob' # Specify the cloud storage providers.
+  cloud_bwlimit: '10M' # Controls the bandwidth limit.
+  cloud_event: 'sync' # Define transfer events.
+  cloud_config: # Specify the cloud storage configuration.
+    account: 'blobuser' # Storage Account Name.
+    key: 'base64encodedkey==' # Storage Account Key.
+    endpoint: 'blob.core.chinacloudapi.cn' # Endpoint for the service.
+
+# System Variables #
+alerta_arg:
+  user: 'alerta' # System user name for running Alerta services.
+  auth_provider: 'basic' # Defines authentication providers.
+  signup_enabled: false # Whether prevent sign-up of new users via the web UI.
+  log_max_mib: '25' # Maximum mebibyte size of log file before rollover.
+  log_backup_count: '10' # Number of rollover files before older files are deleted.
+  log_format: 'verbose' # Defines log file formatter.
+
+# Plugins Variables #
+alerta_plugins:
+  prometheus:
+    - alertmanager_api_url: 'http://MONITOR-Production-alertmanager.service.dc01.local:9093'
+      alertmanager_silence_days: '2'
+
+# Service Mesh #
+environments: 'Development' # Define the service environment.
+#tags: # Define the service custom label.
+#  subscription: 'default'
+#  owner: 'nobody'
+#  department: 'Infrastructure'
+#  organization: 'The Company'
+#  region: 'IDC01'
+exporter_is_install: false # Whether to install prometheus exporter.
+consul_public_register: false # Whether register a exporter service with public consul client.
+consul_public_exporter_token: '00000000-0000-0000-0000-000000000000' # Public Consul client ACL token.
+consul_public_http_prot: 'https' # The consul Hypertext Transfer Protocol.
+consul_public_http_port: '8500' # The consul HTTP API port.
+consul_public_clients: # List of public consul clients.
+  - '127.0.0.1'
