--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,7 +16,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: license (GPL-2.0-or-later, MIT, etc)
 
-  min_ansible_version: 2.4
+  min_ansible_version: 2.8
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -47,7 +47,24 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
+  - role: 'ansible-role-linux-mongodb'
+    vars:
+      mongod_servers: '{{ alerta_servers }}'
+      mongod_version: '{{ alerta_mongod_version }}'
+      mongod_system_type: 'small'
+      mongod_authorization: '{{ alerta_mongod_auth }}'
+      mongod_node_role: '{{ alerta_mongod_node_role }}'
+      mongod_path: '{{ alerta_mongod_path }}'
+      mongod_port: '{{ alerta_mongod_port }}'
+      mongod_replset: "{% if ( alerta_servers|length is not divisibleby 2 ) and ( alerta_servers|length > 2 ) %}{{ alerta_mongod_replset | default('alerta') }}{% else %}Non-ReplicaSet{% endif %}"
+      mongod_sa_pass: '{{ alerta_mongod_sa_user }}'
+      mongod_sa_user: '{{ alerta_mongod_sa_pass }}'
+      mongod_backupset_arg: '{{ alerta_mongod_backupset_arg }}'
+      mongod_bu_dbs_arg:
+        - user: '{{ alerta_mongod_user }}'
+          pass: '{{ alerta_mongod_pass }}'
+          dbs: 'alerta'
+          role: 'readWrite'
