--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,90 @@
 ---
-# tasks file for ansible-role-linux-alerta
+- name: Sets MongoDB node variables for Cluster
+  set_fact:
+    alerta_mongod_hosts: '{{ alerta_servers }}'
+  when:
+    - alerta_mongod_dept | bool
+
+- name: Include tasks for specific OS.
+  include: '{{ ansible_os_family }}.yml'
+
+- name: Include firewall tasks.
+  include: 'firewall.yml'
+
+- name: Install Alerta dependence python package.
+  pip:
+    name: '{{ alerta_python_dependent_packages }}'
+    state: 'forcereinstall'
+    virtualenv_command: '/bin/virtualenv-3'
+    virtualenv_python: '/bin/python3'
+    executable: '/usr/local/bin/pip3'
+    extra_args: '--ignore-installed -i {{ alerta_pypi_url }}'
+  register: alerta_python_dependent_packages_update
+  until: alerta_python_dependent_packages_update is succeeded
+  retries: 3
+  delay: 5
+
+- name: Include plugins tasks.
+  include: 'plugins.yml'
+  when: alerta_plugins is defined
+
+- name: Add the group Alerta.
+  group:
+    name: '{{ alerta_arg.user }}'
+
+- name: Add the user Alerta.
+  user:
+    name: '{{ alerta_arg.user }}'
+    group: '{{ alerta_arg.user }}'
+    create_home: 'no'
+    shell: '/usr/bin/false'
+
+- name: Creating Alerta folder.
+  file:
+    dest: '{{ item }}'
+    state: 'directory'
+    owner: '{{ {{ alerta_arg.user }} }}'
+    group: '{{ {{ alerta_arg.user }} }}'
+    mode: '0755'
+  loop: '{{ alerta_folder }}'
+
+- name: Install Alerta Web UI.
+  unarchive:
+    src: 'https://github.com/alerta/alerta-webui/releases/latest/download/alerta-webui.tar.gz'
+    dest: '{{ alerta_dist_path }}/alerta'
+    owner: '{{ alerta_arg.user }}'
+    group: '{{ alerta_arg.user }}'
+    extra_opts: [--strip-components=1]
+    remote_src: 'yes'
+    validate_certs: 'no'
+  register: alerta_webui_update
+  until: alerta_webui_update is succeeded
+  retries: 3
+  delay: 5
+
+- name: Alerta Configure & Scripts file transfer.
+  template:
+    src: '{{ item.src }}'
+    dest: '{{ item.dest }}'
+    owner: 'root'
+    group: 'root'
+    mode: '0664'
+  loop: '{{ alerta_conf_scripts }}'
+
+- name: Enable Alerta authentication.
+  include: 'authentication.yml'
+  when: alerta_servers[0] in ansible_default_ipv4.address
+
+- name: Reload the other Alerta service.
+  shell: echo ''
+  notify: 'Ensure Alerta service is enabled'
+  when: alerta_webui_update is changed or alerta_python_dependent_packages_update is changed or alerta_plugins_update is changed
+
+- name: Force the handler to run immediately.
+  meta: flush_handlers
+
+- name: Registered with HashiCorp Consul.
+  include: 'register.yml'
+  when:
+    - exporter_is_install | bool
+    - consul_public_register | bool
