--- a/meta/main.yml
+++ b/meta/main.yml
@@ -60,8 +60,8 @@ dependencies:
       mongod_path: '{{ alerta_mongod_path }}'
       mongod_port: '{{ alerta_mongod_port }}'
       mongod_replset: "{% if ( alerta_servers|length is not divisibleby 2 ) and ( alerta_servers|length > 2 ) %}{{ alerta_mongod_replset | default('alerta') }}{% else %}Non-ReplicaSet{% endif %}"
-      mongod_sa_pass: '{{ alerta_mongod_sa_user }}'
-      mongod_sa_user: '{{ alerta_mongod_sa_pass }}'
+      mongod_sa_pass: '{{ alerta_mongod_sa_pass }}'
+      mongod_sa_user: '{{ alerta_mongod_sa_user }}'
       mongod_backupset_arg: '{{ alerta_mongod_backupset_arg }}'
       mongod_bu_dbs_arg:
         - user: '{{ alerta_mongod_user }}'
