--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,11 +15,16 @@ alerta_port_arg:
   webui: '19198' # The port number of Web UI.
 
 # MongoDB parameters #
+alerta_mongod_auth: false # A boolean value, Enable or Disable MongoDB authentication.
 alerta_mongod_hosts: 'localhost' # Group of MongoDB hosts Graylog should connect to.
 alerta_mongod_node_role: 'replica' # Member role for ReplicaSet.
 alerta_mongod_path: '{{ alerta_dist_path }}' # Specify the MongoDB data directory.
 alerta_mongod_port: '27017' # The MongoDB instance port.
 alerta_mongod_replset: '{{ alerta_cluster }}' # MongoDB ReplicaSet name.
+alerta_mongod_sa_pass: 'changeme' # MongoDB Superuser password.
+alerta_mongod_sa_user: 'sa' # MongoDB Superuser name.
+alerta_mongod_user: 'alerta' # MongoDB Graylog username.
+alerta_mongod_pass: 'changeme' # MongoDB Graylog password.
 alerta_mongod_version: '36' # Specify the MongoDB version.
 alerta_mongod_backupset_arg: # Defines backup parameters.
   keep: '7' # Backup retention cycle in days.
@@ -43,7 +48,7 @@ alerta_arg:
   log_format: 'verbose' # Defines log file formatter.
 
 # Plugins Variables #
-alerta_plugins:
+alerta_plugins: # Define the addition extend plugin.
   prometheus:
     - alertmanager_api_url: 'http://MONITOR-Production-alertmanager.service.dc01.local:9093'
       alertmanager_silence_days: '2'
