--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,8 @@ alerta_mongod_backupset_arg: # Defines backup parameters.
 alerta_arg:
   user: 'alerta' # System user name for running Alerta services.
   auth_provider: 'basic' # Defines authentication providers.
+  base_url: '/api' # API served on a path or behind a proxy use it to fix relative links.
+  use_proxyfix: 'False' # API served behind SSL terminating proxy.
   signup_enabled: 'False' # Whether prevent sign-up of new users via the web UI.
   log_max_mib: '25' # Maximum mebibyte size of log file before rollover.
   log_backup_count: '10' # Number of rollover files before older files are deleted.
