modified:   defaults/main.yml 	modified:   meta/main.yml 	modified:   templates/alertad.conf.j2 	modified:   vars/main.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -53,7 +53,7 @@ alerta_arg:
 # Plugins Variables #
 alerta_plugins: # Define additional plugins to install.
   prometheus:
-    - alertmanager_api_url: 'http://MONITOR-Production-alertmanager.service.dc01.local:9093'
+    - alertmanager_api_url: 'monitor-production-alertmanager.service.dc01.local:9093'
       alertmanager_silence_days: '2'
 
 # Service Mesh #
