--- a/tasks/register.yml
+++ b/tasks/register.yml
@@ -15,7 +15,7 @@
   uri:
     url: '{{ consul_public_http_prot }}://{{ ansible_default_ipv4.address }}:{{ consul_public_http_port }}/v1/agent/service/register'
     method: 'PUT'
-    body: '{"tags":["alerta"],"ID":"{{ group_names[0] | title | regex_replace("_", "-") }}-{{ group_names[-1] | title | regex_replace("_", "-") }}-{{ environments | upper | regex_replace("_", "-") }}-alerta","name":"{{ group_names[0] | title | regex_replace("_", "-") }}-{{ group_names[-1] | title | regex_replace("_", "-") }}-{{ environments | upper | regex_replace("_", "-") }}-alerta","address":"{{ ansible_default_ipv4.address }}","port":{{ alerta_port_arg.api }},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ alerta_port_arg.api }}","interval":"10s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
+    body: '{"tags":["alerta"],"ID":"{{ customer | lower | regex_replace("_", "-") }}-{{ environments | lower | regex_replace("_", "-") }}-{{ group_names[-1] | lower | regex_replace("_", "-") }}-{{ group_names[0] | lower | regex_replace("_", "-") }}-alerta","name":"{{ customer | lower | regex_replace("_", "-") }}-{{ environments | lower | regex_replace("_", "-") }}-{{ group_names[-1] | lower | regex_replace("_", "-") }}-{{ group_names[0] | lower | regex_replace("_", "-") }}-alerta","address":"{{ ansible_default_ipv4.address }}","port":{{ alerta_port_arg.api }},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ alerta_port_arg.api }}","interval":"10s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
     body_format: 'json'
     status_code: '200'
     headers:
@@ -38,7 +38,7 @@
   uri:
     url: '{{ consul_public_http_prot }}://{{ item.client }}:{{ consul_public_http_port }}/v1/agent/service/register'
     method: 'PUT'
-    body: '{"tags":["prometheus","exporter"],"ID":"{{ inventory_hostname | upper }}_alerta_exporter","name":"alerta_exporter","address":"{{ ansible_default_ipv4.address }}","port":{{ alerta_port_arg.api }},"meta":{"application":"Monitor","metrics_path":"/management/metrics","instance":"{{ inventory_hostname | upper }}","project":"{{ group_names[0] | title | regex_replace("_", "-") }}","group":"{{ group_names[-1] | title | regex_replace("_", "-") }}","datacenter":"{{ datacenter | lower }}","domain":"{{ domain | lower }}","environment":"{{ environments | upper }}"{% if tags is defined %},{{ tags | to_json | regex_replace("{") | regex_replace("}") }}{% endif %}},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ alerta_port_arg.api }}","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
+    body: '{"tags":["prometheus","exporter"],"ID":"{{ inventory_hostname | lower }}_alerta_exporter","name":"alerta_exporter","address":"{{ ansible_default_ipv4.address }}","port":{{ alerta_port_arg.api }},"meta":{"application":"Monitor","metrics_path":"/management/metrics","instance":"{{ inventory_hostname | lower }}","customer":"{{ customer | title | regex_replace("_", "-") }}","project":"{{ group_names[-1] | title | regex_replace("_", "-") }}","group":"{{ group_names[0] | title | regex_replace("_", "-") }}","datacenter":"{{ datacenter | lower }}","domain":"{{ domain | lower }}","environment":"{{ environments | lower }}"{% if tags is defined %},{{ tags | to_json | regex_replace("{") | regex_replace("}") }}{% endif %}},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ alerta_port_arg.api }}","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
     body_format: 'json'
     status_code: '200'
     headers:
