--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,32 +26,21 @@
   include: 'plugins.yml'
   when: alerta_plugins is defined
 
-- name: Add the group Alerta.
-  group:
-    name: '{{ alerta_arg.user }}'
-
-- name: Add the user Alerta.
-  user:
-    name: '{{ alerta_arg.user }}'
-    group: '{{ alerta_arg.user }}'
-    create_home: 'no'
-    shell: '/usr/bin/false'
-
 - name: Creating Alerta folder.
   file:
     dest: '{{ item }}'
     state: 'directory'
-    owner: '{{ alerta_arg.user }}'
-    group: '{{ alerta_arg.user }}'
+    owner: 'root'
+    group: 'root'
     mode: '0755'
   loop: '{{ alerta_folder }}'
 
 - name: Install Alerta Web UI.
   unarchive:
     src: 'https://github.com/alerta/alerta-webui/releases/latest/download/alerta-webui.tar.gz'
-    dest: '{{ alerta_dist_path }}/alerta'
-    owner: '{{ alerta_arg.user }}'
-    group: '{{ alerta_arg.user }}'
+    dest: '/data/nginx/site/alerta'
+    owner: 'root'
+    group: 'root'
     extra_opts: [--strip-components=1]
     remote_src: 'yes'
     validate_certs: 'no'
