--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,8 +30,8 @@
   file:
     dest: '{{ item }}'
     state: 'directory'
-    owner: 'root'
-    group: 'root'
+    owner: 'nobody'
+    group: 'nobody'
     mode: '0755'
   loop: '{{ alerta_folder }}'
 
@@ -53,7 +53,7 @@
 
 - name: Alerta Configure & Scripts file transfer.
   template:
-    src: '{{ item.src }}'
+    src: '{{ item.src }}.j2'
     dest: '{{ item.dest }}'
     owner: 'root'
     group: 'root'
