--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,10 +13,11 @@
 
 - name: Install Alerta dependence python package.
   pip:
-    name: '{{ alerta_python_dependent_packages }}'
+    name: '{{ item }}'
     state: 'present'
     executable: '/usr/bin/pip3.6'
-    extra_args: '-i {{ alerta_pypi_url }}'
+    extra_args: '--default-timeout=120 --ignore-installed -i https://{{ alerta_pypi_url }}/pypi/simple/ --trusted-host {{ alerta_pypi_url }}'
+  loop: '{{ alerta_python_dependent_packages }}'
   register: alerta_python_dependent_packages_update
   until: alerta_python_dependent_packages_update is succeeded
   retries: 5
@@ -37,12 +38,13 @@
 
 - name: Install Alerta Web UI.
   unarchive:
-    src: 'https://github.com/alerta/alerta-webui/releases/latest/download/alerta-webui.tar.gz'
+#    src: 'https://github.com/alerta/alerta-webui/releases/latest/download/alerta-webui.tar.gz'
+    src: 'alerta-webui.tar.gz'
     dest: '/data/nginx/site/alerta'
     owner: 'root'
     group: 'root'
     extra_opts: [--strip-components=1]
-    remote_src: 'yes'
+#    remote_src: 'yes'
     validate_certs: 'no'
   environment:
     no_proxy: '*'
