--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -3,9 +3,19 @@
   set_fact:
     alerta_plugin_list: "{{ lookup('dict', alerta_plugins, wantlist=True) | json_query('[*].key') }}"
 
+- name: Plugins package file transfer.
+  synchronize:
+    src: 'plugins/{{ item }}'
+    dest: '/tmp/'
+    owner: false
+    group: false
+    mode: 'push'
+  loop: '{{ alerta_plugin_list }}'
+
 - name: Install Alerta dependence plugins.
   pip:
-    name: 'git+https://github.com/alerta/alerta-contrib.git#subdirectory=plugins/{{ item }}'
+    name: 'file:///tmp/{{ item }}'
+#    name: 'https://github.com/alerta/alerta-contrib.git#subdirectory=plugins/{{ item }}'
     state: 'present'
     executable: '/usr/bin/pip3.6'
   environment:
@@ -13,5 +23,5 @@
   loop: "{{ alerta_plugin_list }}"
   register: alerta_plugins_update
   until: alerta_plugins_update is succeeded
-  retries: 10
+  retries: 50
   delay: 2
