--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,9 +26,12 @@ alerta_port_arg:
   api: '19199' # The port number of API.
   webui: '19198' # The port number of Web UI.
 
+# Unable to use Azure cosmos dB for MongoDB API because Response "One or more property names for the unique index is invalid. Make sure that the property names do not contain invalid characters and that the combined paths for all unique index properties do not exceed 60 characters."
+
 # MongoDB parameters #
 alerta_mongod_auth: true # A boolean to determine whether or not to enable MongoDB authentication.
-alerta_mongod_hosts: 'localhost' # Group of MongoDB hosts should connect to.
+alerta_mongod_hosts: # Group of MongoDB hosts should connect to.
+  - 'localhost'
 alerta_mongod_node_role: 'replica' # Member role for ReplicaSet.
 alerta_mongod_path: '/data' # Specify the MongoDB data directory.
 alerta_mongod_port: '27017' # The MongoDB instance port.
