--- a/meta/main.yml
+++ b/meta/main.yml
@@ -85,7 +85,7 @@ dependencies:
         - 'HEAD'
         - 'DELETE'
       ngx_site:
-        - domain: 'alerta'
+        - domain: '{{ alerta_ngx_domain }}'
           syntax:
             - 'location /api { try_files $uri @api; }'
             - 'location @api {'
@@ -103,7 +103,7 @@ dependencies:
             - '  proxy_set_header X-Forwarded-Host $host;'
             - '  proxy_set_header X-Forwarded-Server $host;'
             - '  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;'
-            - '  proxy_pass https://backend_alerta;'
+            - '  proxy_pass https://backend_{{ alerta_ngx_domain }};'
             - '}'
           backend_address: '{{ alerta_servers }}'
           backend_port: '{{ alerta_port_arg.api }}'
