--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,14 +14,15 @@
 - name: Install Alerta dependence python package.
   pip:
     name: '{{ item }}'
-    state: 'present'
+    state: 'forcereinstall'
     executable: '/usr/bin/pip3.6'
-    extra_args: '--default-timeout=120 -i https://{{ alerta_pypi_url }}/pypi/simple/ --trusted-host {{ alerta_pypi_url }}'
+    extra_args: '--default-timeout=120 --ignore-installed -i https://{{ alerta_pypi_url }}/pypi/simple/ --trusted-host {{ alerta_pypi_url }}'
   loop: '{{ alerta_python_dependent_packages }}'
   register: alerta_python_dependent_packages_update
   until: alerta_python_dependent_packages_update is succeeded
   retries: 5
   delay: 2
+  notify: Enable alerta service.
 
 - name: Include plugins tasks.
   include: 'plugins.yml'
@@ -38,20 +39,15 @@
 
 - name: Install Alerta Web UI.
   unarchive:
-#    src: 'https://github.com/alerta/alerta-webui/releases/latest/download/alerta-webui.tar.gz'
     src: 'alerta-webui.tar.gz'
-    dest: '/data/nginx/site/alerta'
+    dest: '/data/nginx/site/{{ alerta_ngx_domain }}'
     owner: 'root'
     group: 'root'
     extra_opts: [--strip-components=1]
-#    remote_src: 'yes'
     validate_certs: 'no'
   environment:
     no_proxy: '*'
-  register: alerta_webui_update
-  until: alerta_webui_update is succeeded
-  retries: 10
-  delay: 2
+  notify: Enable alerta service.
 
 - name: Alerta Configure & Scripts file transfer.
   template:
@@ -61,12 +57,7 @@
     group: 'root'
     mode: '0664'
   loop: '{{ alerta_conf_scripts }}'
-  register: alerta_conf_update
-
-- name: Reload the other Alerta service.
-  shell: echo ''
-  notify: 'Ensure Alerta service is enabled'
-  when: alerta_webui_update is changed or alerta_python_dependent_packages_update is changed or alerta_plugins_update is changed or alerta_conf_update is changed
+  notify: Enable alerta service.
 
 - name: Force the handler to run immediately.
   meta: flush_handlers
