--- a/vars/main.yml
+++ b/vars/main.yml
@@ -16,8 +16,8 @@ alerta_folder:
 alerta_conf_scripts:
   - { src: 'alertad.conf', dest: '/etc/alertad.conf' }
   - { src: 'alertad.service', dest: '/lib/systemd/system/alertad.service' }
-  - { src: 'config.json', dest: '/data/nginx/site/alerta/config.json' }
-  - { src: 'wsgi.py', dest: '/data/nginx/site/alerta/wsgi.py' }
+  - { src: 'config.json', dest: '/data/nginx/site/{{ alerta_ngx_domain }}/config.json' }
+  - { src: 'wsgi.py', dest: '/data/nginx/site/{{ alerta_ngx_domain }}/wsgi.py' }
   - { src: 'uwsgi.ini', dest: '/etc/uwsgi.ini' }
 
 alerta_allowed_environments:
