modified:   README.md 	modified:   defaults/main.yml 	modified:   files/alerta-webui.tar.gz 	modified:   files/plugins/prometheus/alerta_prometheus.py 	modified:   templates/alertad.conf.j2 	modified:   vars/main.yml

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,9 +5,8 @@ alerta_python_dependent_packages:
   - 'pip'
   - 'setuptools_rust'
   - 'wheel'
-  - 'PyJWT==1.7.1'
   - 'alerta'
-  - 'alerta-server=={{ alerta_version }}'
+  - 'alerta-server'
   - 'uwsgi'
 
 alerta_folder:
