--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,7 +45,7 @@ alerta_mongod_pass: 'changeme' # MongoDB password.
 alerta_mongod_version: '36' # Specify the MongoDB version.
 alerta_mongod_backupset_arg: # Defines backup parameters.
   keep: '7' # Backup retention cycle in days.
-  encryptkey: 'wEX6nE3eHAJp' # BackupSet encryption key, Decrypt by [openssl aes-256-cbc -d -k passwd -salt -in file.tar.gz | tar xzvfP -].
+  encryptkey: 'changeme' # BackupSet encryption key, Decrypt by [openssl aes-256-cbc -d -k passwd -salt -in file.tar.gz | tar xzvfP -].
   cloud_rsync: false # Whether rsync for cloud storage.
   cloud_drive: 'azureblob' # Specify the cloud storage providers.
   cloud_bwlimit: '10M' # Controls the bandwidth limit.
